Fix navbar on smaller screens

--- a/base/static/base/css/base_style.css
+++ b/base/static/base/css/base_style.css
@@ -16,6 +16,7 @@ a {
 .brand {
     font-family: 'AvenirLTS', serif;
     color: #F62F05;
+    white-space: nowrap !important;
 }
 
 .brand:hover {
